# panda_model

./: .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  python-publish.yml
cmake/: FindPoco.cmake  PandaModelConfig.cmake.in
docs/: conf.py  index.rst  modules.rst  panda_model.rst
examples/: download_all.py  model.py
examples/cpp/: CMakeLists.txt  main.cpp
include/: model.h
include/pandamodel/: defaults.h  model.h
scripts/: panda_model_download
src/: _core.cpp  defaults.cpp
src/libfranka/: library_downloader.cpp  library_downloader.h  library_loader.cpp  library_loader.h  model.cpp  model_library.cpp  model_library.h  network.cpp  network.h  service_types.h
src/panda_model/: __init__.py  __init__.pyi  download.py
src/panda_model/_core/: __init__.pyi
tests/: data.py  test_Model.py  test_download_library.py  test_environ.py  test_without_fci.py
