[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "panda-model"
description = "panda-model allows the offline use of the Model class from libfranka in Python and C++."
version = "0.2.0"
requires-python = ">=3.7"
authors = [
    { name = "Jean Elsner", email = "jean.elsner@tum.de" },
]
dependencies = [
  'numpy'
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python", "robotics", "panda", "libfranka", "dynamics", "franka", "emika", "jacobian", "model", "control", "simulation", "robot-manipulator"]

classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]

test = [
    "pytest"
]

[project.urls]
homepage = "https://github.com/JeanElsner/panda_model"
documentation = "https://panda-model.readthedocs.io"
repository = "https://github.com/JeanElsner/panda_model"

[tool.scikit-build]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"

[project.scripts]
panda-model-download = "panda_model.download:run"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = ["pp*", "*musllinux*"]
test-command = "pytest {package}/tests/test_without_fci.py"
test-extras = ["test"]

[tool.cibuildwheel.linux]
before-all = "yum install -y eigen3-devel poco-devel"
archs = ["x86_64"]
